[gd_scene load_steps=30 format=3 uid="uid://qwaq8gaisp6c"]

[ext_resource type="Texture2D" uid="uid://cnfmw3udolcqt" path="res://assets/Images/tiles.png" id="1_kv688"]
[ext_resource type="Script" uid="uid://4rcvmd68mrq2" path="res://Game/Scripts/game_tile.gd" id="2_ovnvd"]
[ext_resource type="Texture2D" uid="uid://dnbtc58i6dlyh" path="res://assets/Images/Particles/explosion.png" id="3_61y4n"]
[ext_resource type="Texture2D" uid="uid://bl53pl8dyxl83" path="res://assets/Images/Particles/brick_particle.png" id="3_p0aik"]
[ext_resource type="Script" uid="uid://c0xyqs2taxlqd" path="res://Game/Scripts/explosion_particles.gd" id="4_jpheh"]
[ext_resource type="Texture2D" uid="uid://cod3k4x0e1eot" path="res://assets/Images/Gems/rainbowsheet.png" id="5_r7pom"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_0i6mb"]

[sub_resource type="Animation" id="Animation_0nhsn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:centered")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="Animation" id="Animation_x5tsa"]
resource_name = "diamond"
length = 3.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 12.5664]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1.5, 1.5, 1.5, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5, 3.2),
"transitions": PackedFloat32Array(1, 1.02837, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5), Vector2(1e-05, 1e-05)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:self_modulate")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(2, 2, 2, 1), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:centered")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(25, 25)]
}

[sub_resource type="Animation" id="Animation_lt2sa"]
resource_name = "double_diamond"
length = 3.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 2, 3, 3.5),
"transitions": PackedFloat32Array(1, 7.25833e-05, 1, 1),
"update": 0,
"values": [0.0, 12.5664, 12.5664, 18.8496]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 2, 3, 3.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1.5, 1.5, 1.5, 1), Color(1.5, 1.5, 1.5, 1), Color(1.5, 1.5, 1.5, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 2, 3, 3.5),
"transitions": PackedFloat32Array(1, 1, 1, 1.02837, 1.02837, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05), Vector2(1, 1), Vector2(3, 3), Vector2(3, 3), Vector2(1e-05, 1e-05)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:self_modulate")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2, 2, 3, 3.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1.5, 1.5, 1.5, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:centered")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(25, 25)]
}

[sub_resource type="Animation" id="Animation_47m3v"]
resource_name = "energized"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1.2, 1.2), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(2, 2, 2, 1), Color(2, 2, 2, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.375, 0.45, 0.525, 0.608333, 0.683333, 0.758333, 0.833333, 0.916667, 0.991667, 1.06667, 1.14167, 1.20833, 1.28333, 1.35833, 1.43333, 1.50833, 1.6, 1.65833, 1.73333, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, -0.218166, 0.218166, -0.218166, 0.218166, -0.218166, 0.218166, -0.218166, 0.218166, -0.218166, 0.218166, -0.218166, 0.218166, -0.218166, 0.218166, -0.218166, 0.218166, 0.0, 0.218166, -0.218166, 0.0, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(25, 25)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:centered")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_5bmfu"]
resource_name = "Pop"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:centered")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(25, 25), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_pwddg"]
resource_name = "vanish"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:centered")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(25, 25), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o4kt1"]
_data = {
&"RESET": SubResource("Animation_0nhsn"),
&"diamond": SubResource("Animation_x5tsa"),
&"double_diamond": SubResource("Animation_lt2sa"),
&"energized": SubResource("Animation_47m3v"),
&"pop": SubResource("Animation_5bmfu"),
&"vanish": SubResource("Animation_pwddg")
}

[sub_resource type="Environment" id="Environment_uwx8p"]
background_mode = 3
glow_enabled = true
glow_intensity = 2.0

[sub_resource type="Gradient" id="Gradient_lk848"]
offsets = PackedFloat32Array(0.361111, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_xejaj"]
colors = PackedColorArray(0.314316, 0.314316, 0.314316, 1, 1, 1, 1, 1)

[sub_resource type="Gradient" id="Gradient_t6yne"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0aik"]
atlas = ExtResource("5_r7pom")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sfjq"]
atlas = ExtResource("5_r7pom")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_18rwu"]
atlas = ExtResource("5_r7pom")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ul85"]
atlas = ExtResource("5_r7pom")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0k51"]
atlas = ExtResource("5_r7pom")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_smr8m"]
atlas = ExtResource("5_r7pom")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnjjl"]
atlas = ExtResource("5_r7pom")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_it7ks"]
atlas = ExtResource("5_r7pom")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_to4m5"]
atlas = ExtResource("5_r7pom")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4uli"]
atlas = ExtResource("5_r7pom")
region = Rect2(32, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jigi1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0aik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sfjq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18rwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ul85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0k51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smr8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnjjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_it7ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_to4m5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4uli")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}]

[node name="tile" type="Sprite2D"]
material = SubResource("CanvasItemMaterial_0i6mb")
texture = ExtResource("1_kv688")
centered = false
hframes = 4
vframes = 5
frame = 9
script = ExtResource("2_ovnvd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_o4kt1")
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_uwx8p")

[node name="BrickParticles" type="CPUParticles2D" parent="."]
position = Vector2(25, 25)
emitting = false
amount = 125
texture = ExtResource("3_p0aik")
one_shot = true
explosiveness = 1.0
direction = Vector2(2, 1)
spread = 180.0
initial_velocity_min = 15.25
initial_velocity_max = 191.92
radial_accel_min = -37.6
radial_accel_max = 32.2
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 0.0
scale_amount_max = 1.2
color_ramp = SubResource("Gradient_lk848")
color_initial_ramp = SubResource("Gradient_xejaj")
hue_variation_min = -1.0
hue_variation_max = 1.0

[node name="ExplosionParticles" type="CPUParticles2D" parent="."]
z_index = 5
emitting = false
amount = 200
texture = ExtResource("3_61y4n")
one_shot = true
explosiveness = 0.5
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
linear_accel_min = 31.58
linear_accel_max = 31.58
scale_amount_min = 0.1
scale_amount_max = 0.1
color_ramp = SubResource("Gradient_t6yne")
script = ExtResource("4_jpheh")

[node name="RainbowDiamond" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(1.563, 1.563)
sprite_frames = SubResource("SpriteFrames_jigi1")
frame = 1
frame_progress = 0.177608
